--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,64 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <title>Stream-Scraper</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Stream-Scraper</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        .jumbotron .img {
+            margin-bottom: 0px;
+            opacity: 0.25;
+            color: #fff;
+            background: #000;
+            background-image:url("../assets/images/images-sports.jpg");
+            background-position: center center;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            overflow: hidden;
+            position:absolute;
+            top:0;
+            left:0;
+            z-index:1;
+        }
+        .jumbotron h1 {margin-top:0;}
+        .jumbotron {
+            position:relative;
+            padding-top:50px;
+            padding-bottom:50px;
+        }
+        .jumbotron .container {
+            position:relative;
+            z-index:2;
+        }
+        
+        @media screen and (max-width: 768px) {
+            .jumbotron {
+                padding-top:20px;
+                padding-bottom:20px;
+            }
+        }
+    </style>   
+</head>
 </html>
-
 <body>
-<div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-12">
-                <h1>Stream Scraper</h1>
-                  <p>
-                  Sports streams at your fingertips    
-                  </p>
-                  </div>
-          </div>
-      </div>
-  </div>
-  <div id="wrapper">
-      <div id="Streams"></div>
-      <div id="notes"></div>
-  </div>
-  <script src="jquery-3.3.1.min.js"></script>
+    <div class="jumbotron">
+        <div class="img"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Stream Scraper</h1>
+                    <p>
+                        Sports streams at your fingertips
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="wrapper">
+        <div id="streams"></div>
+        <div id="notes"></div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src-"app.js"></script>
 </body>
