--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Stream-Scraper</title>
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-        .jumbotron .img {
-            margin-bottom: 0px;
-            opacity: 0.25;
-            color: #fff;
-            background: #000;
-            background-image:url("../assets/images/images-sports.jpg");
-            background-position: center center;
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            overflow: hidden;
-            position:absolute;
-            top:0;
-            left:0;
-            z-index:1;
-        }
-        .jumbotron h1 {margin-top:0;}
-        .jumbotron {
-            position:relative;
-            padding-top:50px;
-            padding-bottom:50px;
-        }
-        .jumbotron .container {
-            position:relative;
-            z-index:2;
-        }
-        
-        @media screen and (max-width: 768px) {
-            .jumbotron {
-                padding-top:20px;
-                padding-bottom:20px;
-            }
-        }
-    </style>   
 </head>
-</html>
 <body>
     <div class="jumbotron">
         <div class="img"></div>
@@ -60,5 +25,6 @@
         <div id="notes"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src-"app.js"></script>
+    <script src="app.js"></script>
 </body>
+</html>
