--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,13 @@
         </div>
     </div>
     <div id="wrapper">
-        <div id="streams"></div>
-        <div id="notes"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6" id="streams"></div>
+            <div class="col-md-1"></div>
+            <div class="col-md-3" id="notes"></div>
+            <div class="col-md-1"></div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="app.js"></script>
